fixed layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,6 @@ html, body {
 	font-family: 'Oswald', sans-serif;
 }
 /* navigation */
-.jt-nav-wrapper {
-	/*background-color: black;*/
-	/*color: white;*/
-}
 .jt-nav-wrapper header {
 	border-bottom: 1px solid #404040;
 	padding-bottom: 0.3em;
@@ -31,7 +27,6 @@ html, body {
 }
 .jt-nav-wrapper ul li a {
 	text-decoration: none;
-	/*color: white;*/
 	padding: 1em 1em 1em 0em;
 	width: 100%;
 	display: block;
@@ -47,18 +42,12 @@ html, body {
 
 /* Index */
 .page-banner {
-	/*background-color: black;*/
 	text-transform: uppercase;
-	/*color: white;*/
 	border-bottom: 1px solid #404040;
 	text-align: center;
 	padding: 1em 0em 0.96em 0em;
+	overflow: hidden;
 }
 .panel {
 	 text-align: center;
-}
-@media all and (max-width: 768px) {
-	.col-md-9 {
-		padding: 0em;
-	}
 }
